java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/UncaughtExceptionTest/testBug113380a-hints.pass
Add throws clause for java.lang.InstantiationException
Surround Statement with try-catch
Surround Block with try-catch
